--- a/assignment/AndroidAssignment/app/src/main/res/drawable/button_round.xml
+++ b/assignment/AndroidAssignment/app/src/main/res/drawable/button_round.xml
@@ -3,14 +3,14 @@
     android:padding="10dp"
     android:shape="rectangle">  //10만큼 각모서리에
 
-   <stroke android:width="3dp"
-       android:color="#f06292"/>
+   <stroke android:width="1dp"
+       android:color="@color/selector_edittext_border"/>
 
-   <solid android:color="#FFFFFF"/> //내부 색 설정
+   <solid android:color="@color/selector_edittext"/> //내부 색 설정
     <corners
-        android:topLeftRadius="12dp"
-        android:topRightRadius="12dp"
-        android:bottomLeftRadius="12dp"
-        android:bottomRightRadius="12dp"/> //각 모서리를 12dp만큼 둥글게 만들겠다ㅣ.
+        android:topLeftRadius="5dp"
+        android:topRightRadius="5dp"
+        android:bottomLeftRadius="5dp"
+        android:bottomRightRadius="5dp"/> //각 모서리를 12dp만큼 둥글게 만들겠다ㅣ.
 
 </shape>
