--- a/assignment/AndroidAssignment/app/src/main/res/layout/activity_home.xml
+++ b/assignment/AndroidAssignment/app/src/main/res/layout/activity_home.xml
@@ -1,203 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background=""
     tools:context=".HomeActivity">
 
-
-    <ScrollView
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/vp_sample"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/bnv_sample"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bnv_sample"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:menu="@menu/menu_sample"
+        app:itemIconTint="@color/selector_bottom_navi"
+        app:itemRippleColor="#FFB2EF"
+        app:itemTextColor="@color/selector_bottom_navi"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintEnd_toEndOf="@+id/vp_sample"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/tv_home_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:fontFamily="@font/allerta"
-                android:text="SOPTHub"
-                android:textColor="#F06292"
-                android:textSize="30dp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+        />
 
 
-            <TextView
-                android:id="@+id/tv_home_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="130dp"
-                android:layout_marginTop="30dp"
-                android:fontFamily="@font/allerta"
-                android:text="이름"
-                android:textColor="#000000"
-                android:textSize="15dp"
-                android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/iv_home_profile" />
-
-            <TextView
-                android:id="@+id/tv_home_age"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:fontFamily="@font/allerta"
-                android:text="나이"
-                android:textColor="#000000"
-                android:textSize="15dp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="@+id/tv_home_name"
-                app:layout_constraintStart_toStartOf="@+id/tv_home_name"
-                app:layout_constraintTop_toBottomOf="@+id/tv_home_name" />
-
-            <TextView
-                android:id="@+id/tv_home_age2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:fontFamily="@font/allerta"
-                android:text="25"
-                android:textColor="#000000"
-                android:textSize="15dp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="@+id/tv_home_name2"
-                app:layout_constraintStart_toStartOf="@+id/tv_home_name2"
-                app:layout_constraintTop_toBottomOf="@+id/tv_home_name2" />
-
-            <TextView
-                android:id="@+id/tv_home_mbti"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:fontFamily="@font/allerta"
-                android:text="MBTI"
-                android:textColor="#000000"
-                android:textSize="15dp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="@+id/tv_home_age"
-                app:layout_constraintStart_toStartOf="@+id/tv_home_age"
-                app:layout_constraintTop_toBottomOf="@+id/tv_home_age" />
-
-            <TextView
-                android:id="@+id/tv_home_mbti2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:fontFamily="@font/allerta"
-                android:text="ESTJ"
-                android:textColor="#000000"
-                android:textSize="15dp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="@+id/tv_home_age2"
-                app:layout_constraintStart_toStartOf="@+id/tv_home_age2"
-                app:layout_constraintTop_toBottomOf="@+id/tv_home_age2" />
-
-            <TextView
-                android:id="@+id/tv_home_introduce"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:fontFamily="@font/allerta"
-                android:text="안녕하세요 25살 권용민입니다"
-                android:textColor="#000000"
-                android:textSize="15dp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_home_mbti" />
-
-            <TextView
-                android:id="@+id/tv_home_name2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:layout_marginEnd="130dp"
-                android:fontFamily="@font/allerta"
-                android:text="권용민"
-                android:textColor="#000000"
-                android:textSize="15dp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/iv_home_profile" />
-
-            <ImageView
-                android:id="@+id/iv_home_profile"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="-30dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="-30dp"
-                app:layout_constraintDimensionRatio="1:1"
-                app:layout_constraintEnd_toEndOf="@+id/tv_home_title"
-                app:layout_constraintStart_toStartOf="@+id/tv_home_title"
-                app:layout_constraintTop_toBottomOf="@+id/tv_home_title"
-                app:srcCompat="@drawable/myface" />
-
-
-            <ImageButton
-                android:id="@+id/bt_home_git"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_marginTop="20dp"
-                android:src="@drawable/bt_git"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.498"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_home_introduce" />
-
-            <Button
-                android:id="@+id/bt_home_follower"
-                android:layout_width="150sp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="30sp"
-                android:layout_marginTop="15dp"
-                android:backgroundTint="#F06292"
-                android:paddingHorizontal="30sp"
-                android:text="팔로워\n목록"
-                android:textColor="#FFFFFF"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/bt_home_git" />
-
-            <Button
-                android:id="@+id/bt_home_repository"
-                android:layout_width="150sp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:layout_marginEnd="30sp"
-                android:backgroundTint="#FDC065"
-                android:paddingHorizontal="30sp"
-                android:text="레포지토리\n목록"
-                android:textColor="#FFFFFF"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/bt_home_git" />
-
-            <androidx.fragment.app.FragmentContainerView
-                android:id="@+id/container_fragment"
-                android:layout_width="match_parent"
-                android:layout_height="700dp"
-                android:layout_marginTop="10dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/bt_home_follower" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
-
-
-    /
 
 </androidx.constraintlayout.widget.ConstraintLayout>
