--- a/assignment/AndroidAssignment/app/src/main/res/layout/activity_sign_in.xml
+++ b/assignment/AndroidAssignment/app/src/main/res/layout/activity_sign_in.xml
@@ -7,45 +7,37 @@
     tools:context=".SignInActivity">
 
     <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/allerta"
-        android:text="SOPTHub"
-        android:textColor="#F06292"
-        android:textSize="30dp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
         android:id="@+id/tv_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="60dp"
-        android:fontFamily="@font/allerta"
-        android:text="아이디"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="320dp"
+        android:fontFamily="@font/noto_sans_kr"
+        android:textFontWeight="700"
+        android:text="깃허브 아이디"
         android:textColor="#000000"
-        android:textSize="18dp"
-        android:textStyle="bold"
+        android:textSize="14sp"
+        android:textStyle="normal"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_login" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <EditText
         android:id="@+id/et_id"
         android:layout_width="0dp"
-        android:layout_height="50dp"
+        android:layout_height="44sp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginEnd="20dp"
         android:background="@drawable/button_round"
         android:ems="10"
         android:hint="아이디를 입력해주세요"
         android:inputType="textPersonName"
         android:paddingStart="15dp"
         android:textSize="15dp"
+        android:fontFamily="@font/noto_sans_kr"
+        android:textFontWeight="400"
+        android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/tv_id"
         app:layout_constraintTop_toBottomOf="@+id/tv_id" />
@@ -54,27 +46,31 @@
         android:id="@+id/tv_pw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="34dp"
+        android:fontFamily="@font/noto_sans_kr"
+        android:textFontWeight="700"
         android:text="비밀번호"
         android:textColor="#000000"
-        android:textStyle="bold"
-        android:fontFamily="@font/allerta"
-        android:textSize="18dp"
+        android:textSize="14sp"
+        android:textStyle="normal"
         app:layout_constraintStart_toStartOf="@+id/et_id"
         app:layout_constraintTop_toBottomOf="@+id/et_id" />
 
     <EditText
         android:id="@+id/et_pw"
         android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="40dp"
+        android:layout_height="44sp"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="20dp"
         android:background="@drawable/button_round"
         android:ems="10"
         android:hint="비밀번호를 입력해주세요"
         android:inputType="numberPassword"
         android:paddingStart="15dp"
         android:textSize="15dp"
+        android:fontFamily="@font/noto_sans_kr"
+        android:textFontWeight="400"
+        android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/tv_pw"
         app:layout_constraintTop_toBottomOf="@+id/tv_pw" />
@@ -82,43 +78,59 @@
     <Button
         android:id="@+id/bt_login"
         android:layout_width="0dp"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="173dp"
         android:backgroundTint="#F06292"
+        android:fontFamily="@font/noto_sans_kr"
+        android:textFontWeight="700"
         android:text="로그인"
-        android:fontFamily="@font/allerta"
-        android:textStyle="bold"
         android:textSize="15dp"
-        app:layout_constraintBottom_toTopOf="@+id/bt_signin"
+        android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="@+id/et_pw"
-        app:layout_constraintStart_toStartOf="@+id/et_pw" />
+        app:layout_constraintStart_toStartOf="@+id/et_pw"
+        app:layout_constraintTop_toBottomOf="@+id/et_pw" />
 
     <Button
         android:id="@+id/bt_signin"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="20dp"
-        android:backgroundTint="#F8DCDC"
-        android:fontFamily="@font/allerta"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="100dp"
+        android:backgroundTint="@color/material_on_primary_disabled"
+        android:fontFamily="@font/noto_sans_kr"
         android:text="회원가입"
         android:textColor="#8C8C8C"
-        android:textSize="15dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/bt_login"
-        app:layout_constraintStart_toStartOf="@+id/bt_login" />
+        android:textFontWeight="700"
+        android:textSize="12dp"
+        android:textStyle="normal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/tv_signUp"
+        app:layout_constraintTop_toBottomOf="@+id/bt_login" />
 
-    <TextView
-        android:id="@+id/tv_login"
+    <ImageView
+        android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="로그인"
-        android:textColor="#000000"
-        android:textStyle="bold"
-        android:fontFamily="@font/allerta"
-        android:textSize="18dp"
+        android:layout_marginTop="66dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_title" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/img_github" />
+
+    <TextView
+        android:id="@+id/tv_signUp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="105dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="41dp"
+        android:fontFamily="@font/noto_sans_kr"
+        android:text="계정이 없으신가요?"
+        android:textFontWeight="400"
+        android:textStyle="normal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bt_login" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
