--- a/assignment/AndroidAssignment/app/src/main/res/layout/activity_sign_up.xml
+++ b/assignment/AndroidAssignment/app/src/main/res/layout/activity_sign_up.xml
@@ -7,61 +7,53 @@
     tools:context=".SignUpActivity">
 
     <TextView
-        android:id="@+id/tv_su_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:fontFamily="@font/capriola"
-        android:text="SOPTHub"
-        android:textColor="#f06292"
-        android:textSize="30dp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
         android:id="@+id/tv_su_subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/allerta"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="80dp"
+        android:fontFamily="@font/noto_sans_kr"
+        android:textFontWeight="700"
+        android:textStyle="normal"
         android:text="회원가입"
         android:textColor="#000000"
-        android:textStyle="bold"
-        android:textSize="18dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        android:textSize="25sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_su_title" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/allerta"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="55dp"
+        android:fontFamily="@font/noto_sans_kr"
+        android:textFontWeight="700"
         android:text="이름"
         android:textColor="#000000"
-        android:textSize="18dp"
-        android:textStyle="bold"
+        android:textSize="14sp"
+        android:textStyle="normal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_su_subtitle" />
 
     <EditText
         android:id="@+id/et_name"
         android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="40dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="20dp"
         android:background="@drawable/button_round"
         android:ems="10"
         android:hint="이름을 입력해주세요"
         android:inputType="textPersonName"
-        android:paddingStart="15dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="181dp"
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
         android:textSize="15dp"
+        android:fontFamily="@font/noto_sans_kr"
+        android:textFontWeight="400"
+        android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/tv_name"
@@ -71,27 +63,34 @@
         android:id="@+id/tv_su_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:fontFamily="@font/allerta"
-        android:text="아이디"
+        android:layout_marginTop="34dp"
+        android:fontFamily="@font/noto_sans_kr"
+        android:textFontWeight="700"
+        android:text="깃허브 아이디"
         android:textColor="#000000"
-        android:textSize="18dp"
-        android:textStyle="bold"
+        android:textSize="14sp"
+        android:textStyle="normal"
         app:layout_constraintStart_toStartOf="@+id/et_name"
         app:layout_constraintTop_toBottomOf="@+id/et_name" />
 
     <EditText
         android:id="@+id/et_su_id"
         android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="40dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="20dp"
         android:background="@drawable/button_round"
         android:ems="10"
-        android:hint="아이디를 입력해주세요"
+        android:hint="깃허브 아이디를 입력해주세요"
         android:inputType="textPersonName"
-        android:paddingStart="15dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="126dp"
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
         android:textSize="15dp"
+        android:fontFamily="@font/noto_sans_kr"
+        android:textFontWeight="400"
+        android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/tv_su_id"
         app:layout_constraintTop_toBottomOf="@+id/tv_su_id" />
@@ -100,27 +99,34 @@
         android:id="@+id/tv_su_pw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:fontFamily="@font/allerta"
+        android:layout_marginTop="34dp"
+        android:fontFamily="@font/noto_sans_kr"
+        android:textFontWeight="700"
         android:text="비밀번호"
         android:textColor="#000000"
-        android:textSize="18dp"
-        android:textStyle="bold"
+        android:textSize="14sp"
+        android:textStyle="normal"
         app:layout_constraintStart_toStartOf="@+id/et_su_id"
         app:layout_constraintTop_toBottomOf="@+id/et_su_id" />
 
     <EditText
         android:id="@+id/et_su_pw"
         android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="40dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="20dp"
         android:background="@drawable/button_round"
         android:ems="10"
         android:hint="비밀번호를 입력해주세요"
         android:inputType="numberPassword"
-        android:paddingStart="15dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="155dp"
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
         android:textSize="15dp"
+        android:fontFamily="@font/noto_sans_kr"
+        android:textFontWeight="400"
+        android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/tv_su_pw"
         app:layout_constraintTop_toBottomOf="@+id/tv_su_pw" />
@@ -128,14 +134,17 @@
     <Button
         android:id="@+id/bt_su"
         android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="40dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="67dp"
+        android:layout_marginBottom="74dp"
         android:backgroundTint="#F06292"
-        android:fontFamily="@font/allerta"
-        android:text="회원가입 완료"
+        android:fontFamily="@font/noto_sans_kr"
+        android:textFontWeight="700"
+        android:text="회원가입"
         android:textSize="15dp"
         android:textStyle="bold"
+        android:paddingStart="132dp"
+        android:paddingEnd="132dp"
         app:iconTint="#4C2424"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/et_su_pw"
