--- a/assignment/AndroidAssignment/app/src/main/res/layout/fragment_follower_list.xml
+++ b/assignment/AndroidAssignment/app/src/main/res/layout/fragment_follower_list.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".FollowerList">
+    tools:context=".FollowerListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_follower"
@@ -14,6 +13,4 @@
         tools:itemCount="4"
         tools:listitem="@layout/git_follower_list"/>
 
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
